--- a/i3/config
+++ b/i3/config
@@ -30,8 +30,8 @@ new_window pixel 1
 # hide_edge_borders both
 
 # Set inner/outer gaps
-gaps inner 1
-gaps outer 1
+gaps inner 0
+gaps outer 0
 
 # show window title bars (not officially supported with i3gaps)
 #default_border normal
@@ -313,6 +313,7 @@ client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 ############################################
 
 exec_always --no-startup-id ~/.config/polybar/launch.sh
+exec always nitrogen --restore
 
 #####################################
 # Application menu handled by rofi: #
