--- a/i3/config
+++ b/i3/config
@@ -289,7 +289,7 @@ set $ws10 "10"
 ######################################
 
 # Define colors variables:
-set $darkbluetrans	#08052be6
+set $darkbluetrans	#08052b
 set $darkblue		#08052b
 set $lightblue		#5294e2
 set $urgentred		#e53935
@@ -298,23 +298,38 @@ set $black		#000000
 set $purple		#e345ff
 set $darkgrey		#383c4a
 set $grey		#b0b5bd
-set $mediumgrey		#8b8b8b
+set $mediumgrey		#fb4934
 set $yellowbrown	#e1b700
+
+set $darkbox  #282828
+set $fg0      #fbf1c7
+set $fg       #ebdbb2
 
 # define colors for windows:
 #class		        	border		bground		text		indicator	child_border
-client.focused		    	$lightblue	$darkblue	$white		$mediumgrey	$mediumgrey
-client.unfocused	    	$darkblue	$darkblue	$grey		$darkgrey	$darkgrey
-client.focused_inactive		$darkblue	$darkblue	$grey		$black		$black
+client.focused		    	$fg0	$darkbox	$fg			$fg0
+client.unfocused	    	$darkbox	$darkbox	#a89984		$darkgrey	$darkgrey
+client.focused_inactive		$darkbox	$darkbox	$grey		$black		$black
 client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 
 ############################################
 # bar settings (input comes from i3blocks) #
 ############################################
 
-exec_always --no-startup-id ~/.config/polybar/launch.sh
-exec_always nitrogen --restore
-exec_always --no-startup-id redshift
+# exec_always --no-startup-id ~/.config/polybar/launch.sh
+exec --no-startup-id nitrogen --restore
+
+bar {
+    status_command i3status
+    font pango: Hack Regular Nerd Font Complete 12
+
+    colors {
+      background $darkbox
+      statusline $fg0
+      focused_workspace $fg $fg $darkbox
+      inactive_workspace $darkbox $darkbox $fg
+      }
+}
 
 #####################################
 # Application menu handled by rofi: #
