--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -17,10 +17,10 @@
 ;==========================================================
 
 [colors]
-background = #282A2E
+background = #282828
 background-alt = #373B41
 foreground = #C5C8C6
-primary = #F0C674
+primary = #98971a
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
