add ranger to repo and update some minor i3 configs

--- a/i3/config
+++ b/i3/config
@@ -289,9 +289,9 @@ set $ws10 "10"
 ######################################
 
 # Define colors variables:
-set $darkbox  #282828
-set $fg0      #fbf1c7
-set $fg       #ebdbb2
+set $gruvbox_bg  #282828
+set $gruvbox_fg0      #fbf1c7
+set $gruvbox_blue #458588
 set $urgentred		#e53935
 set $white		#ffffff
 set $black		#000000
@@ -302,9 +302,9 @@ set $green  #98971a
 
 # define colors for windows:
 #class		        	border		bground		text		indicator	child_border
-client.focused		    	$fg0	$darkbox	$fg			$fg0
-client.unfocused	    	$darkbox	$darkbox	#a89984		$darkgrey	$darkgrey
-client.focused_inactive		$darkbox	$darkbox	$grey		$black		$black
+client.focused		    	$gruvbox_fg0	$gruvbox_bg	$gruvbox_fg0			$gruvbox_fg0
+client.unfocused	    	$gruvbox_bg	$gruvbox_bg	#a89984		$darkgrey	$darkgrey
+client.focused_inactive		$gruvbox_bg	$gruvbox_bg	$grey		$black		$black
 client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 
 ############################################
@@ -312,21 +312,24 @@ client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 ############################################
 
 # exec_always --no-startup-id ~/.config/polybar/launch.sh
-# exec --no-startup-id nitrogen --restore
+exec --no-startup-id setxkbmap -option compose:ralt
+exec --no-startup-id nitrogen --restore
 exec --no-startup-id greenclip daemon>/dev/null
 bindsym Ctrl+mod1+p exec "flameshot gui"
 
-# bar {
-#     status_command i3status
-#     font pango: Hack Regular Nerd Font Complete 12
-#
-#     colors {
-#       background $darkbox
-#       statusline $fg0
-#       focused_workspace $fg $fg $darkbox
-#       inactive_workspace $darkbox $darkbox $fg
-#       }
-# }
+bar {
+    # status_command i3status
+    font pango: Hack Regular Nerd Font Complete 12
+    status_command i3blocks -c ~/.config/i3/i3blocks.conf
+    position bottom
+
+    colors {
+      background $gruvbox_bg
+      statusline $gruvbox_fg0
+      focused_workspace $gruvbox_blue $gruvbox_blue $gruvbox_fg0
+      inactive_workspace $gruvbox_bg $gruvbox_bg $fg
+      }
+}
 
 #####################################
 # Application menu handled by rofi: #
