--- a/i3/config
+++ b/i3/config
@@ -340,6 +340,8 @@ exec --no-startup-id setxkbmap -option compose:ralt
 exec --no-startup-id nitrogen --restore
 exec --no-startup-id greenclip daemon>/dev/null
 bindsym Ctrl+mod1+p exec "flameshot gui"
+bindsym mod1+Shift+equal exec brightnessctl set +10%
+bindsym mod1+Shift+minus exec brightnessctl set 10%-
 
 
 #####################################
