--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,7 +6,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @continuum-restore 'on'
 
 # Yank/copy tmux content in session
-set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Plugins to enable base16 colors
 # set -g @plugin 'mattdavis90/base16-tmux'
@@ -44,6 +44,8 @@ set -sg escape-time 0
 
 # Enable mouse
 set -g mouse on
+
+# run-shell ~/clone/path/yank.tmux
 
 run '~/.tmux/plugins/tpm/tpm'
 # run-shell ~/.tmux/tmux-nordvpn/nordvpn.tmux
