--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -118,6 +118,7 @@ ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
 #--------------------------------------------
 # Video/Audio with a GUI
 #-------------------------------------------
+mime ^video|audio, has haruna,   X, flag f = haruna -- "$@"
 mime ^video|audio, has gmplayer, X, flag f = gmplayer -- "$@"
 mime ^video|audio, has smplayer, X, flag f = smplayer "$@"
 mime ^video,       has mpv,      X, flag f = mpv -- "$@"
@@ -133,6 +134,7 @@ mime ^video|audio, has totem,    X, flag f = totem --fullscreen -- "$@"
 #--------------------------------------------
 # Video without X
 #-------------------------------------------
+mime ^video, terminal, !X, has haruna    = haruna -- "$@"
 mime ^video, terminal, !X, has mpv       = mpv -- "$@"
 mime ^video, terminal, !X, has mplayer2  = mplayer2 -- "$@"
 mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
