--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-live_config_reload = true
 # save_to_clipboard = true
 
 [colors]
@@ -105,3 +104,6 @@ opacity = 1
 [window.class]
 general = "Alacritty"
 instance = "Alacritty"
+
+[general]
+live_config_reload = true
